# H3

./: Dockerfile  README.md  ReadMe.md  docker-compose.yml  interview.kmz  map.html  pyproject.toml  requirements.txt  test_api.rest  test_h3.py
.github/workflows/: ci_cd.yaml
app/: main.py
app/api/: endpoints.py  models.py
app/const/: __init__.py  const.py
app/core/: __init__.py  types.py
app/utils/: __init__.py  exceptions.py  h3_utils.py  intersection.py
tests/: test_endpoints.py  test_h3_utils.py
