[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex.Mkr",email = "alex.mkr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "h3 (>=4.2.2,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
